feat: create API for sending email after register use nodemailer and zoho
